# calculatorMax-Rust

./: .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  README.md  README_CAT.md  README_EN.md  README_HK.md  README_RU.md  README_TW.md  main.py
.cargo/: config.toml
.github/agents/: Coder.agent.md
.github/workflows/: ci.yml
assets/fonts/: README.md
examples/: check_mods.rs  eval_loop.rs  test_full_parse.rs  test_mods.rs  test_parse.rs  test_sections.rs  test_toml.rs
mods/: README.md  README_ru.md  README_zh-CN.md  README_zh-TW.md  add.cmfun  multiply.cmfun  test_correct.cmfun
scripts/: fast-build.sh
src/: lib.rs  main.rs
src/calculator/: evaluator.rs  history.rs  math_functions.rs  mod.rs  mods.rs  random.rs
src/config/: mod.rs
src/i18n/: mod.rs  translations.rs
src/i18n/locales/: cat.json  en.json  ru.json  zh-CN.json  zh-HK.json  zh-TW.json
src/memory/: mod.rs
src/ui/: gui.rs  mod.rs
tests/: integration_tests.rs
